--- a/Ships/Battleship/Setup.xaml
+++ b/Ships/Battleship/Setup.xaml
@@ -6,30 +6,11 @@
              xmlns:local="clr-namespace:Battleship"
              mc:Ignorable="d" Height="245.556" Width="303.333">
     <Grid HorizontalAlignment="Left" Margin="0,0,0,-0.4" Width="323">
-        <Button x:Name="btnPlay" Content="Play" HorizontalAlignment="Center" Height="42" Margin="106,171,123,0" Click="buttonStart_Click" Width="94" VerticalAlignment="Top" IsDefault="True" FontFamily="TimesNewRoman" FontSize="14.667" FontWeight="Bold" Background="#9999CC" BorderBrush="#FFC1C0E8" Foreground ="White" RenderTransformOrigin="0.521,0.952"/>
-        <Label x:Name="lblDifficulty" Content="Choose Difficulty" HorizontalAlignment="Center" Margin="79,97,93,0" VerticalAlignment="Top" FontFamily="TimesNewRoman" FontSize="14.667" Foreground="#9999CC"/>
-        <RadioButton x:Name="rbtnSimple" Content="VS computer" GroupName="difficulty" Margin="51,139,166,0" VerticalAlignment="Top" IsChecked="True" HorizontalAlignment="Center" Width="106" Click="rbtnVsComputer_Click" FontFamily="TimesNewRoman" FontSize="13.667" RenderTransformOrigin="0.459,-0.867" >
-            <RadioButton.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0.122"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </RadioButton.RenderTransform>
-        </RadioButton>
-        <RadioButton x:Name="multi" Content="Multiplayer" GroupName="difficulty" Margin="175,140,45,0" VerticalAlignment="Top" IsChecked="True" HorizontalAlignment="Center" Width="103" Click="rbtnMulti_Click" FontFamily="TimesNewRoman" FontSize="13.667" RenderTransformOrigin="0.5,0.5" >
-            <RadioButton.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleX="6.71"/>
-                    <RotateTransform/>
-                    <TranslateTransform X="-0.882"/>
-                </TransformGroup>
-            </RadioButton.RenderTransform>
-        </RadioButton>
-        <Label x:Name="lblWelcome" Content="Welcome to BattleShips" HorizontalAlignment="Center" Margin="50,13,39,0" VerticalAlignment="Top" FontFamily="TimesNewRoman" FontSize="16.667" Width="234" Foreground="#9999CC"/>
-        <Label x:Name="lblName" Content="What is your name:" HorizontalAlignment="Center" Margin="75,39,85,0" VerticalAlignment="Top" FontFamily="TimesNewRoman" FontSize="14.667" Width="163"/>
-        <TextBox x:Name="txtboxName" HorizontalAlignment="Center" Height="23" Margin="91,69,110,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="122" FontFamily="TimesNewRoman" FontSize="14.667" Foreground="Black" Background="White"/>
+        <Button x:Name="btnPlay" Content="Play vs computer" HorizontalAlignment="Center" Height="42" Margin="19,130,20,0" Click="buttonStart_Click" Width="284" VerticalAlignment="Top" IsDefault="True" FontFamily="TimesNewRoman" FontSize="14.667" FontWeight="Bold" Background="#9999CC" BorderBrush="#FFC1C0E8" Foreground ="White" RenderTransformOrigin="0.521,0.952"/>
+        <Label x:Name="lblDifficulty" Content="Select mode" HorizontalAlignment="Center" Margin="79,97,93,0" VerticalAlignment="Top" FontFamily="TimesNewRoman" FontSize="14.667" Foreground="#9999CC"/>
+        <Label x:Name="lblWelcome" Content="Welcome to BattleShips" HorizontalAlignment="Center" Margin="79,21,10,0" VerticalAlignment="Top" FontFamily="TimesNewRoman" FontSize="16.667" Width="234" Foreground="#9999CC"/>
+        <Label x:Name="lblName" Content="What is your name:" HorizontalAlignment="Center" Margin="82,41,78,0" VerticalAlignment="Top" FontFamily="TimesNewRoman" FontSize="14.667" Width="163"/>
+        <TextBox x:Name="txtboxName" HorizontalAlignment="Center" Height="23" Margin="94,74,107,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="122" FontFamily="TimesNewRoman" FontSize="14.667" Foreground="Black" Background="White"/>
+        <Button x:Name="btnMultiplater" Content="Multiplayer"  HorizontalAlignment="Center" Height="42" Margin="19,177,20,0" Click="buttonStartMultiplayer_Click" Width="284" VerticalAlignment="Top" IsDefault="True" FontFamily="TimesNewRoman" FontSize="14.667" FontWeight="Bold" Background="#9999CC" BorderBrush="#FFC1C0E8" Foreground ="White" RenderTransformOrigin="0.521,0.952"/>
     </Grid>
 </UserControl>
